--- a/app/src/main/res/menu/menu_compose_message.xml
+++ b/app/src/main/res/menu/menu_compose_message.xml
@@ -6,8 +6,8 @@
         <!--android:orderInCategory="100" app:showAsAction="never" />-->
     <item
         android:id="@+id/action_send"
-        android:title="send"
+        android:title="Odeslat"
         android:orderInCategory="100"
         android:icon="@drawable/sent"
-        app:showAsAction="always" />
+        app:showAsAction="vždy" />
 </menu>
