--- a/app/src/main/res/menu/menu_message.xml
+++ b/app/src/main/res/menu/menu_message.xml
@@ -4,28 +4,29 @@
 
     <item
         android:id="@+id/action_reply"
-        android:title="Clear"
-        android:titleCondensed="Reply"
+        android:title="Odpovědět"
+        android:titleCondensed="Odpověďet"
         android:icon="@drawable/reply"
         android:orderInCategory="97"
         app:showAsAction="always" />
     <item
         android:id="@+id/action_forward"
-        android:title="Forward"
-        android:titleCondensed="Forward"
+        android:title="Přeposlat"
+        android:titleCondensed="Přeposlat"
         android:icon="@drawable/forward"
         android:orderInCategory="98"
         app:showAsAction="always" />
     <item
         android:id="@+id/action_copy"
-        android:title="Copy"
-        android:titleCondensed="Copy"
+        android:title="Kopírovat"
+        android:titleCondensed="Kopírovat"
         android:icon="@drawable/copy"
         android:orderInCategory="99"
         app:showAsAction="always" />
     <item
         android:id="@+id/action_delete"
-        android:title="Delete"
+        android:title="Smazat"
+        android:titleCondensed="Smazat"
         android:icon="@drawable/trash"
         android:orderInCategory="100"
         app:showAsAction="always" />
