--- a/app/src/main/res/layout/activity_compose_message.xml
+++ b/app/src/main/res/layout/activity_compose_message.xml
@@ -9,7 +9,7 @@
 
     <EditText style="@style/EditText"
         android:layout_margin="@dimen/default_component_margin"
-        android:hint="To"
+        android:hint="Komu"
         android:id="@+id/txt_msg_to"/>
 
     <View style="@style/HorizontalDivider" />
@@ -19,6 +19,6 @@
         android:singleLine="false"
         android:layout_height="fill_parent"
         android:gravity="top"
-        android:hint="Message"
+        android:hint="Zpráva"
         android:id="@+id/txt_msg"/>
 </LinearLayout>
