--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -14,7 +14,7 @@
         </android.support.v4.widget.SwipeRefreshLayout>
     </LinearLayout>
     <TextView style="@style/Banner"
-        android:text="Empty"
+        android:text="Prázdný"
         android:layout_gravity="center"
         android:id="@+id/contact_empty" />
 </FrameLayout>
